# Shakespeare-Networks

./: .project  .pydevproject  README.md  pyproject.toml  run-server.sh
data/: stopwords
data/chekhov/: A TRAGEDIAN IN SPITE OF HIMSELF.html  ON THE HIGH ROAD.html  THE ANNIVERSARY.html  THE BEAR.html  THE CHERRY ORCHARD.html  THE PROPOSAL.html  THE THREE SISTERS.html  THE WEDDING.html  _gutenberg_plays_second_series.html  gutenberg_plays_second_series.html
data/marlowe/: dido.html  edwardii.html  faustus.html  jew_malta.html  malta.html  massacre_paris.html  tamburlaine_1.html  tamburlaine_2.html
data/shakespeare/: characters.csv  plays.txt
py-server/: helper.py  manage.py  runner.py  scrap.py
py-server/batch/: clusters_documents.py  clusters_lda.py  clusters_non_lda.py  clusters_runner.py  clusters_termite.py  clusters_viz.py
py-server/cfg/: asgi.py  settings.py  urls.py  wsgi.ini  wsgi.py
py-server/js/: plays.js
py-server/lib/: plays.js
py-server/shakespeare/: clusters.py  clusters_documents.py  clusters_runner.py  clusters_termite.py  clusters_test.py  clusters_viz.py  fetch_docs.py  page.html  page_all_plays.html  page_eebo.py  page_plays.py  plays_cfg.py  plays_n_graphs.py  plays_n_graphs_test.py  plays_transform.py  preprocessor.py  sc_runner.py  shakespeare_clusters.py  shakespeare_clusters_test.py  shakespeare_pages.py
py-tests/: clusters_runner_test.py  clusters_test.py  page_plays_test.py  plays_n_graphs_test.py  shakespeare_pages_test.py  termite_tests.py
static/: index.html  plays.js
tests/: clusters_runner_test.py
(+141 files in other folders)
